--- a/index.html
+++ b/index.html
@@ -63,12 +63,6 @@
 <a href="http://bsmdoc.feiyilin.com"><img src="./image/bsmdoc.png" alt="./image/bsmdoc.png"></a>
 </div>
 <div class="pure-u-1 pure-u-lg-2-3">
-<p>bsmdoc is a tool to generate technical static html docs:</p>
-<ul>
-<li><b>Light-weighted</b>: keep the 'core' as small as possible;</li>
-<li><b>Highly extendable</b>: extend the tool to solve your own problem easily;</li>
-<li><b>Single file doc</b>: generate images, equations in a single file.</li>
-</ul>
 <p><a href="http://bsmdoc.feiyilin.com">More...</a></p>
 </div>
 </div>
@@ -81,6 +75,22 @@
 <p>In acoustic transmission system, there are two important components: the speaker and the microphone. If the speaker and the microphone are totally separated, there will be no echo from the speaker to the microphone. Then, there is no need for acoustic echo cancellation.</p>
 <p>However, in practice, the speaker and the microphone is almost always not totally separated. For example, when you are calling your friend A, you are the <b>near end</b> user and your friend A is the <b>far end</b> user. The speech from your friend A will come out from the speaker of your phone, which may also be collected by the microphone of your phone and sent back to your friend A.</p>
 <p><a href="aec.html">More...</a></p>
+</div>
+</div>
+<h2><a href="walk.html">A tutorial on time series with neural network</a></h2>
+<div class="pure-g">
+<div class="image-post pure-u-1 pure-u-lg-1-3">
+<a href="walk.html"><img src="./image/walk.svg" alt="./image/walk.svg"></a>
+</div>
+<div class="pure-u-1 pure-u-lg-2-3">
+<div class="quote">
+<div class="quote_content">
+If you torture the data long enough, it will confess.
+</div>
+<div class="quote_by">
+Ronald H. Coase, Essays on Economics and Economists
+</div>
+</div>
 </div>
 </div>
 <h2>Basics of Digital Signal Processing in Communications System</h2>
@@ -104,7 +114,7 @@ Simple C functions to easily process the console program arguments.</p></li>
 </div>
 
 <div class="footer">
-<div class="footer-text"> Last updated 2019-12-12 23:24:31 PST, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
+<div class="footer-text"> Last updated 2019-12-28 00:06:32 PST, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
 </div>
 </div>
 </body>
