Fix a typo in index.bsmdoc.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="sidebar pure-u-1 pure-u-lg-1-6">
 <div class="header">
 <h1>&#x98de;&#x610f;&#x6797;</h1>
-<p>tq@feiyilin.com</p>
+tq@feiyilin.com
 </div>
 </div>
 <div class="content pure-u-1 pre-u-lg-5-6">
@@ -54,7 +54,7 @@
 <li>plot/dump the signals</li>
 <li>......</li>
 </ul>
-<p><a href="http://bsmedit.feiyilin.com">More...</a></p>
+<a href="http://bsmedit.feiyilin.com">More...</a>
 </div>
 </div>
 <h2>bsmdoc -- another technical html doc generator</h2>
@@ -63,7 +63,13 @@
 <a href="http://bsmdoc.feiyilin.com"><img src="./image/bsmdoc.png" alt="./image/bsmdoc.png"></a>
 </div>
 <div class="pure-u-1 pure-u-lg-2-3">
-<p><a href="http://bsmdoc.feiyilin.com">More...</a></p>
+<p>bsmdoc is a tool to generate technical static html docs:</p>
+<ul>
+<li><b>Light-weighted</b>: keep the 'core' as small as possible;</li>
+<li><b>Highly extendable</b>: extend the tool to solve your own problem easily;</li>
+<li><b>Single file doc</b>: generate images, equations in a single file.</li>
+</ul>
+<a href="http://bsmdoc.feiyilin.com">More...</a>
 </div>
 </div>
 <h2>Acoustic Echo Cancellation Overview</h2>
@@ -74,7 +80,7 @@
 <div class="pure-u-1 pure-u-lg-2-3">
 <p>In acoustic transmission system, there are two important components: the speaker and the microphone. If the speaker and the microphone are totally separated, there will be no echo from the speaker to the microphone. Then, there is no need for acoustic echo cancellation.</p>
 <p>However, in practice, the speaker and the microphone is almost always not totally separated. For example, when you are calling your friend A, you are the <b>near end</b> user and your friend A is the <b>far end</b> user. The speech from your friend A will come out from the speaker of your phone, which may also be collected by the microphone of your phone and sent back to your friend A.</p>
-<p><a href="aec.html">More...</a></p>
+<a href="aec.html">More...</a>
 </div>
 </div>
 <h2><a href="walk.html">A tutorial on time series with neural network</a></h2>
@@ -114,7 +120,7 @@ Simple C functions to easily process the console program arguments.</p></li>
 </div>
 
 <div class="footer">
-<div class="footer-text"> Last updated 2019-12-28 00:06:32 PST, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
+<div class="footer-text"> Last updated 2020-01-02 23:06:04 PST, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
 </div>
 </div>
 </body>
