--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ ignoreClass: "tex2jax_ignore|nomathjax"
 MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
 </script>
 <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+<script src="https://use.fontawesome.com/62e0af05fc.js"></script>
 <title>feiyilin</title>
 </head>
 <body class="nomathjax">
@@ -37,17 +38,59 @@ MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
 <div class="pure-g">
 <div class="sidebar pure-u-1 pure-u-lg-1-6">
 <div class="header">
-<h1>&#x98de;&#x610f;&#x6797;</h1>
-tq@feiyilin.com
+<a href="mailto:tq@feiyilin.com"><i class="fa fa-envelope fa-lg"></i></a>
 </div>
 </div>
 <div class="content pure-u-1 pre-u-lg-5-6">
+<h2><a href="munkres.html">Munkres Algorithm For Assignment Problem: A Tutorial</a></h2>
+<div class="pure-g">
+<div class="image-post pure-u-1 pure-u-lg-1-3">
+<a href="munkres.html"><img src="./image/step1_prime.svg" alt="./image/step1_prime.svg" width=260px></a>
+</div>
+<div class="text-post pure-u-1 pure-u-lg-2-3">
+<p><a href="https://pdfs.semanticscholar.org/848c/717ba51e48afef714dfef4bd6ab1cc050dab.pdf">Munkres</a> algorithm (or Hungarian algorithm) is very efficient to solve the <a href="https://en.wikipedia.org/wiki/Assignment_problem">assignment problem</a>. However, I can't find a good tutorial from the internet (most of them are vague high-level description; some show the implementation without explanation), so I try to do it by myself. Here are some applications,</p>
+<a href="munkres.html">More...</a>
+</div>
+</div>
+<h2><a href="smacof.html">SMACOF: A tutorial</a></h2>
+<div class="pure-g">
+<div class="image-post pure-u-1 pure-u-lg-1-3">
+<a href="smacof.html"><img src="./image/smacof3.svg" alt="./image/smacof3.svg"></a>
+</div>
+<div class="text-post pure-u-1 pure-u-lg-2-3">
+<p>For parameter estimation, if the cost function is quadratic, it is easy to find the solution by setting its derivative to zero. For example, suppose we want to estimate $y_i$ from input $\boldsymbol{x}_i$, where $\boldsymbol{x}_i$ is a row vector. Suppose that from our understanding to the problem, we believe linear least square is a good estimator. That is,</p>
+<div class="mathjax">
+$$
+\hat{y}_i = \boldsymbol{x}_i^T \boldsymbol{w},
+\label{eq-ls}
+$$
+</div>
+<p>where row vector $\boldsymbol{w}$ is the coefficients we want to estimate,</p>
+<a href="smacof.html">More...</a>
+</div>
+</div>
+<h2><a href="walk.html">A tutorial on time series with neural network</a></h2>
+<div class="pure-g">
+<div class="image-post pure-u-1 pure-u-lg-1-3">
+<a href="walk.html"><img src="./image/walk.svg" alt="./image/walk.svg"></a>
+</div>
+<div class="text-post pure-u-1 pure-u-lg-2-3">
+<div style="left: 0; transform: none;" class="quote">
+<div class="quote_content">
+If you torture the data long enough, it will confess.
+</div>
+<div class="quote_by">
+Ronald H. Coase, Essays on Economics and Economists
+</div>
+</div>
+</div>
+</div>
 <h2><a href="http://bsmedit.feiyilin.com">bsmedit -- C/C++/SystemC simulation controller</a></h2>
 <div class="pure-g">
 <div class="image-post pure-u-1 pure-u-lg-1-3">
 <a href="http://bsmedit.feiyilin.com"><img src="./image/bsmedit.png" alt="./image/bsmedit.png"></a>
 </div>
-<div class="pure-u-1 pure-u-lg-2-3">
+<div class="text-post pure-u-1 pure-u-lg-2-3">
 <p>bsmedit is a C++/<a href="http://accellera.org/community/systemc">SystemC</a> Visualizer. Long time ago, when I first used the Systemc library to simulate some communication algorithms, I was quickly bored with the following debugging procedure:</p>
 <ol>
 <li>update the source code;</li>
@@ -70,7 +113,7 @@ tq@feiyilin.com
 <div class="image-post pure-u-1 pure-u-lg-1-3">
 <a href="http://bsmdoc.feiyilin.com"><img src="./image/bsmdoc2.png" alt="./image/bsmdoc2.png"></a>
 </div>
-<div class="pure-u-1 pure-u-lg-2-3">
+<div class="text-post pure-u-1 pure-u-lg-2-3">
 <p>bsmdoc is a tool to generate technical static html docs:</p>
 <ul>
 <li><b>Light-weighted</b>: keep the 'core' as small as possible;</li>
@@ -86,43 +129,10 @@ tq@feiyilin.com
 <div class="image-post pure-u-1 pure-u-lg-1-3">
 <a href="aec.html"><img src="./image/aec_dtd.svg" alt="./image/aec_dtd.svg"></a>
 </div>
-<div class="pure-u-1 pure-u-lg-2-3">
+<div class="text-post pure-u-1 pure-u-lg-2-3">
 <p>In acoustic transmission system, there are two important components: the speaker and the microphone. If the speaker and the microphone are totally separated, there will be no echo from the speaker to the microphone. Then, there is no need for acoustic echo cancellation.</p>
 <p>However, in practice, the speaker and the microphone is almost always not totally separated. For example, when you are calling your friend A, you are the <b>near end</b> user and your friend A is the <b>far end</b> user. The speech from your friend A will come out from the speaker of your phone, which may also be collected by the microphone of your phone and sent back to your friend A.</p>
 <a href="aec.html">More...</a>
-</div>
-</div>
-<h2><a href="walk.html">A tutorial on time series with neural network</a></h2>
-<div class="pure-g">
-<div class="image-post pure-u-1 pure-u-lg-1-3">
-<a href="walk.html"><img src="./image/walk.svg" alt="./image/walk.svg"></a>
-</div>
-<div class="pure-u-1 pure-u-lg-2-3">
-<div style="left: 0; transform: none;" class="quote">
-<div class="quote_content">
-If you torture the data long enough, it will confess.
-</div>
-<div class="quote_by">
-Ronald H. Coase, Essays on Economics and Economists
-</div>
-</div>
-</div>
-</div>
-<h2><a href="smacof.html">SMACOF: A tutorial</a></h2>
-<div class="pure-g">
-<div class="image-post pure-u-1 pure-u-lg-1-3">
-<a href="smacof.html"><img src="./image/smacof3.svg" alt="./image/smacof3.svg"></a>
-</div>
-<div class="pure-u-1 pure-u-lg-2-3">
-<p>For parameter estimation, if the object function is quadratic, it is easy to find the solution by set its derivative to zero. For example, suppose we want to estimate $y_i$ from input $\boldsymbol{x}_i$, where $\boldsymbol{x}_i$ is a row vector. From our understanding to the problem, we believe linear least square is a good estimator. That is,</p>
-<div class="mathjax">
-$$
-\hat{y}_i = \boldsymbol{x}_i^T \boldsymbol{w},
-\label{eq-ls}
-$$
-</div>
-<p>where row vector $\boldsymbol{w}$ is the coefficients we want to estimate,</p>
-<a href="smacof.html">More...</a>
 </div>
 </div>
 <h2>Basics of Digital Signal Processing in Communications System</h2>
@@ -146,7 +156,7 @@ Simple C functions to easily process the console program arguments.</p></li>
 </div>
 
 <div class="footer">
-<div class="footer-text"> Last updated 2020-01-04 16:20:33 PST, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
+<div class="footer-text"> Last updated 2020-01-10 20:49:46 PST, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
 </div>
 </div>
 </body>
