--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@ MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
 <div class="pure-g">
 <div class="sidebar pure-u-1 pure-u-lg-1-6">
 <div class="header">
+<div class="avatar">
+<img src="image/avatar.png" alt="image/avatar.png">
+</div>
 <a href="mailto:tq@feiyilin.com"><i class="fa fa-envelope fa-lg"></i></a>
 </div>
 </div>
@@ -49,7 +52,7 @@ MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
 </div>
 <div class="text-post pure-u-1 pure-u-lg-2-3">
 <p><a href="https://pdfs.semanticscholar.org/848c/717ba51e48afef714dfef4bd6ab1cc050dab.pdf">Munkres</a> algorithm (or Hungarian algorithm) is very efficient to solve the <a href="https://en.wikipedia.org/wiki/Assignment_problem">assignment problem</a>. However, I can't find a good tutorial from the internet (most of them are vague high-level description; some show the implementation without explanation), so I try to do it by myself. Here are some applications,</p>
-<a href="munkres.html">More...</a>
+<p><a href="munkres.html">More...</a></p>
 </div>
 </div>
 <h2><a href="smacof.html">SMACOF: A tutorial</a></h2>
@@ -66,7 +69,7 @@ $$
 $$
 </div>
 <p>where row vector $\boldsymbol{w}$ is the coefficients we want to estimate,</p>
-<a href="smacof.html">More...</a>
+<p><a href="smacof.html">More...</a></p>
 </div>
 </div>
 <h2><a href="walk.html">A tutorial on time series with neural network</a></h2>
@@ -105,7 +108,7 @@ Ronald H. Coase, Essays on Economics and Economists
 <li>plot/dump the signals</li>
 <li>......</li>
 </ul>
-<a href="http://bsmedit.feiyilin.com">More...</a>
+<p><a href="http://bsmedit.feiyilin.com">More...</a></p>
 </div>
 </div>
 <h2><a href="http://bsmdoc.feiyilin.com">bsmdoc -- another technical html doc generator</a></h2>
@@ -121,7 +124,7 @@ Ronald H. Coase, Essays on Economics and Economists
 <li><b>Single file doc</b>: generate images, equations in a single file.</li>
 </ul>
 <p>bsmdoc splits the whole doc into blocks (e.g., equation block, paragraph block, heading block, ...). In the following sections, we will show each block in detail, as well as the way to extend the existing blocks.</p>
-<a href="http://bsmdoc.feiyilin.com">More...</a>
+<p><a href="http://bsmdoc.feiyilin.com">More...</a></p>
 </div>
 </div>
 <h2><a href="aec.html">Acoustic Echo Cancellation Overview</a></h2>
@@ -132,7 +135,7 @@ Ronald H. Coase, Essays on Economics and Economists
 <div class="text-post pure-u-1 pure-u-lg-2-3">
 <p>In acoustic transmission system, there are two important components: the speaker and the microphone. If the speaker and the microphone are totally separated, there will be no echo from the speaker to the microphone. Then, there is no need for acoustic echo cancellation.</p>
 <p>However, in practice, the speaker and the microphone is almost always not totally separated. For example, when you are calling your friend A, you are the <b>near end</b> user and your friend A is the <b>far end</b> user. The speech from your friend A will come out from the speaker of your phone, which may also be collected by the microphone of your phone and sent back to your friend A.</p>
-<a href="aec.html">More...</a>
+<p><a href="aec.html">More...</a></p>
 </div>
 </div>
 <h2>Basics of Digital Signal Processing in Communications System</h2>
@@ -156,7 +159,7 @@ Simple C functions to easily process the console program arguments.</p></li>
 </div>
 
 <div class="footer">
-<div class="footer-text"> Last updated 2020-01-10 20:49:46 PST, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
+<div class="footer-text"> Last updated 2020-01-12 16:27:55 PST, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
 </div>
 </div>
 </body>
