--- a/index.html
+++ b/index.html
@@ -139,19 +139,53 @@ Ronald H. Coase, Essays on Economics and Economists
 </div>
 </div>
 <h2>Basics of Digital Signal Processing in Communications System</h2>
-<ul>
-<li><a href="basic_basics.html">Basics of Digital Signal Processing</a></li>
-<li><a href="tx.html">Basic transmitter blocks</a></li>
-<li><a href="basic_src.html">Sampling Rate Conversion</a></li>
-<li><a href="basic_sync.html">Synchronization</a></li>
-</ul>
+<h3><a href="basics.html">Basics of Digital Signal Processing</a></h3>
+<div class="pure-g">
+<div class="image-post pure-u-1 pure-u-lg-1-3">
+<a href="basics.html"><img src="./image/sampling_ambiguity.svg" alt="./image/sampling_ambiguity.svg"></a>
+</div>
+<div class="text-post pure-u-1 pure-u-lg-2-3">
+<p>In this section, we will review some basic principles in digital signal processing, which will be widely used in the following sections.</p>
+<p><a href="basics.html">More...</a></p>
+</div>
+</div>
+<h3><a href="tx.html">Basic transmitter blocks</a></h3>
+<div class="pure-g">
+<div class="image-post pure-u-1 pure-u-lg-1-3">
+<a href="tx.html"><img src="./image/mapping_gray_table.svg" alt="./image/mapping_gray_table.svg"></a>
+</div>
+<div class="text-post pure-u-1 pure-u-lg-2-3">
+<p>Scrambler is also called <b>randomizer</b>. It is usually the first block in many communication systems, which 'randomizes' the source data (e.g., the binary sequence). Why do we want to randomize the data? One example is that the randomized data can help the receiver to achieve the symbol synchronization.</p>
+<p><a href="tx.html">More...</a></p>
+</div>
+</div>
+<h3><a href="src.html">Sampling Rate Conversion</a></h3>
+<div class="pure-g">
+<div class="image-post pure-u-1 pure-u-lg-1-3">
+<a href="src.html"><img src="./image/filter_fir_polyphase_down.svg" alt="./image/filter_fir_polyphase_down.svg"></a>
+</div>
+<div class="text-post pure-u-1 pure-u-lg-2-3">
+<p>As suggested by the name, sampling rate conversion (SRC) is to change the sampling rate without distorting the signal. There are several purpose to do that. For example, the ADC at the receiver may always working in a certain sampling frequency, while the digital processing block may work in a different frequency. Thus, an SRC block is needed to fill the gap between the ADC and the following digital blocks.</p>
+<p><a href="src.html">More...</a></p>
+</div>
+</div>
+<h3><a href="sync.html">Synchronization</a></h3>
+<div class="pure-g">
+<div class="image-post pure-u-1 pure-u-lg-1-3">
+<a href="sync.html"><img src="./image/sync_rx_df.svg" alt="./image/sync_rx_df.svg"></a>
+</div>
+<div class="text-post pure-u-1 pure-u-lg-2-3">
+<p>Synchronization is critical to communications system. It helps the system to establish a shared sense of time and frequency between transmitter and receiver. In this section, we will introduce some basic ideas. As we mentioned in all the other sections, we will not plan to list all the algorithms (how could that even be possible?), instead, we will show some basic ideas and wish you will know how to start when you need to deal with a real problem. The code used in this section can be found <a href="./downloads/sync.py">here</a>.</p>
+<p><a href="sync.html">More...</a></p>
+</div>
+</div>
 <h2>Small tools</h2>
 <ul>
-<li><p><a href="https://github.com/tianzhuqiao/tikz_export">tikz_export</a>: 
+<li><p><a href="https://github.com/tianzhuqiao/tikz_export">tikz_export</a>:
 generate pdf/svg/eps file from tikzpicture.</p></li>
-<li><p><a href="pinyin2hanzi.html">Pinyin to Hanzi.</a> 
+<li><p><a href="pinyin2hanzi.html">Pinyin to Hanzi.</a>
 A online tool to convert pinyin to hanzi.</p></li>
-<li><p><a href="progarg.html">Console program arguments processing utility.</a> 
+<li><p><a href="progarg.html">Console program arguments processing utility.</a>
 Simple C functions to easily process the console program arguments.</p></li>
 </ul>
 <p>.</p>
@@ -159,7 +193,7 @@ Simple C functions to easily process the console program arguments.</p></li>
 </div>
 
 <div class="footer">
-<div class="footer-text"> Last updated 2020-01-12 16:27:55 PST, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
+<div class="footer-text"> Last updated 2020-01-14 23:08:51 PST, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
 </div>
 </div>
 </body>
