--- a/index.html
+++ b/index.html
@@ -45,6 +45,28 @@ MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
 </div>
 </div>
 <div class="content pure-u-1 pre-u-lg-5-6">
+<h2><a href="copy_swap_cpp.html">A Tutorial on C++ Copy and Swap Idiom</a></h2>
+<div class="pure-g">
+<div class="text-post pure-u-1 pure-u-lg-1">
+<p>Someone once shows me the following code</p>
+<div class="syntax"><pre><span></span><span class="k">struct</span> <span class="n">Widget</span> <span class="p">{</span>
+    <span class="n">Widget</span><span class="p">()</span> <span class="o">=</span> <span class="k">default</span><span class="p">;</span>
+    <span class="n">Widget</span><span class="p">(</span><span class="k">const</span> <span class="n">Widget</span><span class="o">&amp;</span> <span class="n">w</span><span class="p">)</span> <span class="o">=</span> <span class="k">default</span><span class="p">;</span>
+    <span class="n">Widget</span><span class="p">(</span><span class="n">Widget</span><span class="o">&amp;&amp;</span> <span class="n">w</span><span class="p">)</span> <span class="o">=</span> <span class="k">default</span><span class="p">;</span>
+    <span class="n">Widget</span><span class="o">&amp;</span> <span class="k">operator</span><span class="o">=</span><span class="p">(</span><span class="n">Widget</span> <span class="n">obj</span><span class="p">)</span> <span class="p">{</span>
+        <span class="c1">// swap obj and this</span>
+        <span class="p">...</span>
+        <span class="k">return</span> <span class="o">*</span><span class="k">this</span><span class="p">;</span>
+    <span class="p">}</span>
+
+    <span class="c1">// member variables</span>
+    <span class="kt">int</span> <span class="n">id</span><span class="p">;</span>
+    <span class="p">...</span>
+<span class="p">};</span>
+</pre></div>
+<p><a href="copy_swap_cpp.html">More...</a></p>
+</div>
+</div>
 <h2><a href="munkres.html">Munkres Algorithm For Assignment Problem: A Tutorial</a></h2>
 <div class="pure-g">
 <div class="image-post pure-u-1 pure-u-lg-1-3">
@@ -55,7 +77,7 @@ MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
 <p><a href="munkres.html">More...</a></p>
 </div>
 </div>
-<h2><a href="smacof.html">SMACOF: A tutorial</a></h2>
+<h2><a href="smacof.html">SMACOF: A Tutorial</a></h2>
 <div class="pure-g">
 <div class="image-post pure-u-1 pure-u-lg-1-3">
 <a href="smacof.html"><img src="./image/smacof3.svg" alt="./image/smacof3.svg"></a>
@@ -86,6 +108,7 @@ If you torture the data long enough, it will confess.
 Ronald H. Coase, Essays on Economics and Economists
 </div>
 </div>
+<p><a href="walk.html">More...</a></p>
 </div>
 </div>
 <h2><a href="http://bsmedit.feiyilin.com">bsmedit -- C/C++/SystemC simulation controller</a></h2>
@@ -139,7 +162,7 @@ Ronald H. Coase, Essays on Economics and Economists
 </div>
 </div>
 <h2>Basics of Digital Signal Processing in Communications System</h2>
-<h3><a href="basics.html">Basics of Digital Signal Processing</a></h3>
+<h3><a href="basics.html">basics of digital signal processing</a></h3>
 <div class="pure-g">
 <div class="image-post pure-u-1 pure-u-lg-1-3">
 <a href="basics.html"><img src="./image/sampling_ambiguity.svg" alt="./image/sampling_ambiguity.svg"></a>
@@ -149,7 +172,7 @@ Ronald H. Coase, Essays on Economics and Economists
 <p><a href="basics.html">More...</a></p>
 </div>
 </div>
-<h3><a href="tx.html">Basic transmitter blocks</a></h3>
+<h3><a href="tx.html">Transmitter</a></h3>
 <div class="pure-g">
 <div class="image-post pure-u-1 pure-u-lg-1-3">
 <a href="tx.html"><img src="./image/mapping_gray_table.svg" alt="./image/mapping_gray_table.svg"></a>
@@ -193,7 +216,7 @@ Simple C functions to easily process the console program arguments.</p></li>
 </div>
 
 <div class="footer">
-<div class="footer-text"> Last updated 2020-01-14 23:08:51 PST, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
+<div class="footer-text"> Last updated 2020-06-12 18:29:33 PDT, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
 </div>
 </div>
 </body>
